--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -4,12 +4,18 @@
     box-sizing: border-box;
 }
 
+body {
+    margin:0 auto;
+    padding:0;
+}
+
 .main {position:fixed;
     background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);
     font-family: "Open Sans", sans-serif;
     width:100%;
     height:100%;
     margin:0 auto;
+    padding:0;
     
 }
 
