--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,10 +7,14 @@
 body {
     margin:0 auto;
     padding:0;
+    width:100%;
+    height:100%;
+    
 }
 
 .main {position:fixed;
-    background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);
+    /*background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);*/
+    background:red;
     font-family: "Open Sans", sans-serif;
     width:100%;
     height:100%;
