--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -9,17 +9,16 @@ body {
     padding:0;
     width:100%;
     height:100%;
-    
+
 }
 
 .main {position:fixed;
-    /*background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);*/
-    background:red;
+    background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);
     font-family: "Open Sans", sans-serif;
     width:100%;
     height:100%;
     margin:0 auto;
-    padding:0;
+    padding-left:1%;
     
 }
 
