--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -9,49 +9,120 @@ body {
     padding:0;
     width:100%;
     height:100%;
-    
+    overflow: hidden;
 }
 
-.main {position:fixed;
+.main {
+    position:fixed;
     background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     width:100%;
     height:100%;
-    padding-left:1%;
+    padding:1% 1%;
+    
+}
+.block {
+    display: flex;
+	flex-direction:row;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+#block__utm_source {
+    /*display: inline-block;
+    white-space: nowrap;
+    vertical-align: top;*/
+}   
+
+#block__link {
+    display:flex;
+    align-items: center;
+    flex-direction:row;
+}
+#block__link > input {
+    margin-left:5px;
+    width:420px;
+}
+
+input[type=text],textarea {
+    border: 1px solid #030d11;
+    border-radius: 5px;
+    height: 2em;
+    background-color: rgba(224, 232, 250, 0.411);
     
 }
 
-
-
-
-
-li {
-    list-style-type: none;
+.block-item {
+    border: 1px solid #030d11;
+    padding:2px 10px;
+    margin:5px;
 }
+
+.block-item_general {
+    display: flex;
+}
+.block-item_other {
+    display:inline-block;
+    
+}
+textarea {
+    width: 100%;
+    height:100%;
+}
+#result__link-input {
+    width:458px;
+}
+
+
+
 ul {
     margin: 0; /* Отступ слева в браузере IE и Opera */
     padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
    }
-#block__utm_source {
+li {
+    display:flex;
+    list-style-type: none;
+}
+   
+.buttons > input {
+    border: 1px solid black;
+    text-decoration: none;
     display: inline-block;
-    white-space: nowrap;
-    vertical-align: top;
-}   
-.block {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	width: 100%;
-}
-.block-item {
-    border: 1px solid #030d11;
-    margin:5px;
-    padding:5px;
-    
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: rgb(0, 0, 0);
+    transition: .15s ease-in-out;
+    background-color: transparent;
     
 }
-#result__link-input {
-    width:425px;
-    height:50px;
-}
+.buttons > input:hover {
+    background-color: rgb(127, 127, 213);
+    box-shadow: 0 0 2px 0 rgb(127, 127, 213) inset, 0 0 10px 4px rgb(127, 127, 213);
+    color: #ffffff;
+  }
 
+
+
+
+
+@media (max-width: 470px) 
+{
+    #result__link-input {
+        width:99%;
+    }
+    .block-item_other {
+        display: flex;
+        flex-direction:column;
+        flex-grow:1;
+
+    }
+    .block-item_other > .block-item {
+        flex-grow:1;
+    }
+    .block-item > input {
+        width:100%;
+    }
+
+}
