--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -14,13 +14,32 @@ body {
 
 .main {
     position:fixed;
-    background: linear-gradient(0deg, #7F7FD5, #86A8E7,#91EAE4);
+    background-size:200% 200%;
+    background: linear-gradient(var(--deg, 0deg), #7F7FD5, #86A8E7,#91EAE4);
     font-family: 'Montserrat', sans-serif;
     width:100%;
     height:100%;
     padding:1% 1%;
-    
+
+    animation:gradient 10s linear infinite;
+
 }
+@property --deg {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+  }
+
+
+@keyframes gradient {
+    0% {
+      --deg: 0deg;
+    }
+    100% {
+      --deg: 360deg;
+    }
+  }
+
 .block {
     display: flex;
 	flex-direction:row;
