--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,147 +1,203 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
+:root {
+  --b: 1px red solid;
+  --br: 5px;
+  --b-color: rgb(255, 255, 255);
+  --b-c-element: rgb(255, 255, 255);
+  --l: 1px red solid;
+  --bs: 0px 0px 25px 0px rgba(34, 60, 80, 0.5);
+  --bs-el: 0px 0px 5px 0px rgba(80, 36, 34, 0.5);
+  --color-fonts:rgb(143, 143, 143);
 }
 
+
+
 body {
-    margin:0 auto;
-    padding:0;
-    width:100%;
-    height:100%;
-    overflow: hidden;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .main {
-    position:fixed;
+  /*position:fixed;
     background-size:200% 200%;
-    background: linear-gradient(var(--deg, 0deg), #7F7FD5, #86A8E7,#91EAE4);
-    font-family: 'Montserrat', sans-serif;
-    width:100%;
-    height:100%;
-    padding:1% 1%;
+    background: linear-gradient(var(--deg, 0deg), #7F7FD5, #86A8E7,#91EAE4);*/
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  color:rgb(143, 143, 143);
+  
+  padding: 1% 1%;
 
-    animation:gradient 10s linear infinite;
-
+  animation: gradient 10s linear infinite;
 }
-@property --deg {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-  }
 
+.wrapper {
+  min-width: 280px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+
+  background-color: var(--b-color);
+  box-shadow: var(--bs);
+  border-radius: var(--br);
+}
+
+.wrapper_block {
+  display: flex;
+  flex-wrap:wrap;
+  
+  margin-bottom:10px;
+  
+}
+
+
+@property --deg {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
 
 @keyframes gradient {
-    0% {
-      --deg: 0deg;
-    }
-    100% {
-      --deg: 360deg;
-    }
+  0% {
+    --deg: 0deg;
   }
-
-.block {
-    display: flex;
-	flex-direction:row;
-	flex-wrap: wrap;
-	width: 100%;
+  100% {
+    --deg: 360deg;
+  }
 }
+
+
 
 #block__utm_source {
-    /*display: inline-block;
+  /*display: inline-block;
     white-space: nowrap;
     vertical-align: top;*/
-}   
-
+}
+/*--------------URL-link---------*/
+.block__url_link {
+  margin-bottom:10px;
+}
 #block__link {
-    display:flex;
-    align-items: center;
-    flex-direction:row;
-}
-#block__link > input {
-    margin-left:5px;
-    width:420px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
 }
 
-input[type=text],textarea {
-    border: 1px solid #030d11;
-    border-radius: 5px;
-    height: 1.5em;
-    background-color: rgba(224, 232, 250, 0.411);
-    
+#block__link div {
+  width: 100px;
+  padding: 10px;
+  border-radius: var(--br) 0px 0px var(--br);
+}
+
+#block__link > input {
+  width:100%;
+  border-radius: 0px var(--br) var(--br) 0px;
+  padding: 10px;
+}
+
+input[type="text"],
+textarea {
+  border: 1px solid #030d11;
+  background-color: rgba(250, 238, 224, 0.411);
+}
+/*--------------// URL-link---------*/
+
+/*--------------block-utm-source---------*/
+#block__utm_source {
+  padding: 10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+  border: none;
 }
 
 .block-item {
-    border: 1px solid #030d11;
-    padding:2px 10px;
-    margin:5px;
+  min-width:260px;
 }
 
-.block-item_general {
-    display: flex;
-}
 .block-item_other {
-    display:inline-block;
-    
+  display: inline-block;
 }
-textarea {
-    width: 100%;
-    height:100%;
-}
-#result__link-input {
-    width:458px;
-}
-
 
 
 ul {
-    margin: 0; /* Отступ слева в браузере IE и Opera */
-    padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
-   }
-li {
-    display:flex;
-    list-style-type: none;
+  margin: 0; /* Отступ слева в браузере IE и Opera */
+  padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
 }
-   
+li {
+  display: flex;
+  list-style-type: none;
+}
+.buttons {
+  margin-bottom:10px;
+}
+
 .buttons > input {
-    border: 1px solid black;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 10px;
-    border-radius: 10px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    color: rgb(0, 0, 0);
-    transition: .15s ease-in-out;
-    background-color: transparent;
-    
+  border:none;
+  box-shadow: var(--bs-el);
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px 12px;
+  border-radius: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: var(--color-fonts);
+  transition: 0.15s ease-in-out;
+  background-color: transparent;
 }
 .buttons > input:hover {
-    background-color: rgb(127, 127, 213);
-    box-shadow: 0 0 2px 0 rgb(127, 127, 213) inset, 0 0 10px 4px rgb(127, 127, 213);
-    color: #ffffff;
-  }
+  background-color: rgb(127, 127, 213);
+  box-shadow: 0px 0px 10px 2px rgb(127, 127, 213);
+  color: #ffffff;
+}
+
+/*--------------// block-utm-source---------*/
+
+@media (max-width: 470px) {
+  
+}
+
+/*-------------- block-utm-medium---------*/
+#block__utm_medium {
+  padding: 10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+  border: none;
+}
+
+/*--------------// block-utm-medium---------*/
+
+/*-------------- block-utm-other--------*/
+.block-item_other {
+  padding: 10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+  border: none;
+}
+
+/*--------------// block-utm-other--------*/
 
 
+#result__link {
+  padding: 10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+}
 
 
-
-@media (max-width: 470px) 
-{
-    #result__link-input {
-        width:99%;
-    }
-    .block-item_other {
-        display: flex;
-        flex-direction:column;
-        flex-grow:1;
-
-    }
-    .block-item_other > .block-item {
-        flex-grow:1;
-    }
-    .block-item > input {
-        width:100%;
-    }
-
+#result__link-input {
+  
+}
+.wrapper_textarea{
+  outline:var(--l);
+  
+  
+}
+#result__link-input textarea {
+  box-sizing:border-box;
+  padding:2px 10px;
+  width:100%;
+  border-radius:var(--br);
+  resize:none;
 }
