--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,4 @@
+/*-------------- CSS variables--------------*/
 :root {
   --b: 1px red solid;
   --br: 5px;
@@ -6,57 +7,34 @@
   --l: 1px red solid;
   --bs: 0px 0px 25px 0px rgba(34, 60, 80, 0.5);
   --bs-el: 0px 0px 5px 0px rgba(80, 36, 34, 0.5);
-  --color-fonts:rgb(143, 143, 143);
+  --color-fonts:rgb(34, 34, 34);
+  --color-palette:rgb(127, 127, 213);
+  --color-input:rgba(250, 238, 224, 0.411);
+  --font-family:'Fira Sans', sans-serif;
 }
-
-
-
+/*--------------// CSS variables--------------*/
+/*-------------- main classes--------------*/
 body {
-  margin: 0 auto;
-  padding: 0;
+  margin:0;
+  padding:0;
   width: 100%;
-  height: 100%;
-}
-
-.main {
-  /*position:fixed;
-    background-size:200% 200%;
-    background: linear-gradient(var(--deg, 0deg), #7F7FD5, #86A8E7,#91EAE4);*/
-  font-family: 'Fira Sans', sans-serif;
-  font-weight: 400;
-  color:rgb(143, 143, 143);
-  
-  padding: 1% 1%;
-
+  height:100%;
+  font-family: var(--font-family);
+  background: linear-gradient(var(--deg, 0deg), #7F7FD5, #86A8E7,#91EAE4) no-repeat center center fixed;
   animation: gradient 10s linear infinite;
 }
-
-.wrapper {
-  min-width: 280px;
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 20px;
-
-  background-color: var(--b-color);
-  box-shadow: var(--bs);
-  border-radius: var(--br);
-}
-
-.wrapper_block {
-  display: flex;
-  flex-wrap:wrap;
-  
-  margin-bottom:10px;
+.main {
+  color:var(--color-fonts);
+  margin:0 auto;
+  margin-top:4%;
   
 }
-
-
+/*-- animation background--*/
 @property --deg {
   syntax: "<angle>";
   initial-value: 0deg;
   inherits: false;
 }
-
 @keyframes gradient {
   0% {
     --deg: 0deg;
@@ -65,74 +43,132 @@ body {
     --deg: 360deg;
   }
 }
-
-
-
-#block__utm_source {
-  /*display: inline-block;
-    white-space: nowrap;
-    vertical-align: top;*/
+/*--// animation background--*/
+.main-wrapper {
+  min-width: 280px;
+  max-width: 900px;
+  padding: 20px;
+  margin:0 auto;
+  background-color: var(--b-color);
+  box-shadow: var(--bs);
+  border-radius: var(--br);
 }
-/*--------------URL-link---------*/
-.block__url_link {
+.visually-hidden {
+  display:none;
+}
+/*--------------// main classes--------------*/
+/*-------------- HEADER--------------*/
+.header-title {
+  margin:0px;
   margin-bottom:10px;
+  text-align:center;
 }
-#block__link {
+/*--------------// HEADER--------------*/
+/*-------------- CONTENT --------------*/
+input[type="text"],
+textarea {
+  border:1px rgb(88, 88, 88) solid;
+  background-color: var(--color-input);
+}
+/*-------------- section_url_link--------------*/
+.section_url_link {
   display: flex;
   align-items: center;
   padding: 10px;
   box-shadow: var(--bs-el);
   border-radius: var(--br);
+  margin-bottom:10px;
 }
-
-#block__link div {
-  width: 100px;
+.section_url_link .title {
+  font-size:14px;
+  width: 30px;
+  margin:0;
   padding: 10px;
+  background-color:var(--color-palette);
   border-radius: var(--br) 0px 0px var(--br);
 }
-
-#block__link > input {
+.section_url_link input {
   width:100%;
   border-radius: 0px var(--br) var(--br) 0px;
   padding: 10px;
 }
-
-input[type="text"],
-textarea {
-  border: 1px solid #030d11;
-  background-color: rgba(250, 238, 224, 0.411);
+/*--------------// section_url_link--------------*/
+/*-------------- section_utm_params--------------*/
+.section_utm_params {
+  margin-bottom:10px;
 }
-/*--------------// URL-link---------*/
+.section_utm_params-list {
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: space-between;
+  margin: 0; /* Отступ слева в браузере IE и Opera */
+  padding: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+  list-style-type: none;
+}
+.item {
+  display:flex;
+  flex-direction: column;
+  min-width:260px;
+  padding:10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+}
+.item {
+  display:flex;
+  flex-direction: column;
+  min-width:260px;
+  padding:10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+}
+.item .title {
+  font-weight:500;
+  text-align:center;
+  margin:0;
+}
+/*-------------- block__utm_source --------------*/
+/*id="all_source"  .list_sources */
+.list_sources {
+  list-style-type: none;
+  padding:0;
+  margin:0;
+}
+/*--------------// block__utm_source --------------*/
+/*--------------block-utm-medium--------------*/
+/*id="header utm_medium"*/
 
-/*--------------block-utm-source---------*/
-#block__utm_source {
+/*--------------// block-utm-medium--------------*/
+/*--------------block-utm-other--------------*/
+.block-item_other {
   padding: 10px;
   box-shadow: var(--bs-el);
   border-radius: var(--br);
   border: none;
-}
-
-.block-item {
-  min-width:260px;
-}
-
-.block-item_other {
   display: inline-block;
 }
+/*--------------// block-utm-other--------------*/
+#result__link {
+  padding: 10px;
+  box-shadow: var(--bs-el);
+  border-radius: var(--br);
+}
+#result__link-input textarea {
+  box-sizing:border-box;
+  padding:2px 10px;
+  width:100%;
+  border-radius:var(--br);
+  resize:none;
+}
+
+@media (max-width: 470px) {
+  
+}
+/*--------------// section_utm_params--------------*/
 
 
-ul {
-  margin: 0; /* Отступ слева в браузере IE и Opera */
-  padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
-}
-li {
-  display: flex;
-  list-style-type: none;
-}
 .buttons {
   margin-bottom:10px;
 }
-
 .buttons > input {
   border:none;
   box-shadow: var(--bs-el);
@@ -147,57 +183,8 @@ li {
   background-color: transparent;
 }
 .buttons > input:hover {
-  background-color: rgb(127, 127, 213);
-  box-shadow: 0px 0px 10px 2px rgb(127, 127, 213);
+  background-color: var(--color-palette);
+  box-shadow: 0px 0px 10px 2px var(--color-palette);
   color: #ffffff;
 }
-
-/*--------------// block-utm-source---------*/
-
-@media (max-width: 470px) {
-  
-}
-
-/*-------------- block-utm-medium---------*/
-#block__utm_medium {
-  padding: 10px;
-  box-shadow: var(--bs-el);
-  border-radius: var(--br);
-  border: none;
-}
-
-/*--------------// block-utm-medium---------*/
-
-/*-------------- block-utm-other--------*/
-.block-item_other {
-  padding: 10px;
-  box-shadow: var(--bs-el);
-  border-radius: var(--br);
-  border: none;
-}
-
-/*--------------// block-utm-other--------*/
-
-
-#result__link {
-  padding: 10px;
-  box-shadow: var(--bs-el);
-  border-radius: var(--br);
-}
-
-
-#result__link-input {
-  
-}
-.wrapper_textarea{
-  outline:var(--l);
-  
-  
-}
-#result__link-input textarea {
-  box-sizing:border-box;
-  padding:2px 10px;
-  width:100%;
-  border-radius:var(--br);
-  resize:none;
-}
+/*--------------// CONTENT --------------*/
