--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,27 +7,27 @@
   --l: 1px red solid;
   --bs: 0px 0px 25px 0px rgba(34, 60, 80, 0.5);
   --bs-el: 0px 0px 5px 0px rgba(80, 36, 34, 0.5);
-  --color-fonts:rgb(34, 34, 34);
-  --color-palette:rgb(127, 127, 213);
-  --color-input:rgba(250, 238, 224, 0.411);
-  --font-family:'Fira Sans', sans-serif;
+  --color-fonts: rgb(34, 34, 34);
+  --color-palette: rgb(127, 127, 213);
+  --color-input: rgba(250, 238, 224, 0.411);
+  --font-family: "Fira Sans", sans-serif;
 }
 /*--------------// CSS variables--------------*/
 /*-------------- main classes--------------*/
 body {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   width: 100%;
-  height:100%;
+  height: 100%;
   font-family: var(--font-family);
-  background: linear-gradient(var(--deg, 0deg), #7F7FD5, #86A8E7,#91EAE4) no-repeat center center fixed;
+  background: linear-gradient(var(--deg, 0deg), #7f7fd5, #86a8e7, #91eae4)
+    no-repeat center center fixed;
   animation: gradient 10s linear infinite;
 }
 .main {
-  color:var(--color-fonts);
-  margin:0 auto;
-  margin-top:4%;
-  
+  color: var(--color-fonts);
+  margin: 0 auto;
+  margin-top: 4%;
 }
 /*-- animation background--*/
 @property --deg {
@@ -48,26 +48,26 @@ body {
   min-width: 280px;
   max-width: 900px;
   padding: 20px;
-  margin:0 auto;
+  margin: 0 auto;
   background-color: var(--b-color);
   box-shadow: var(--bs);
   border-radius: var(--br);
 }
 .visually-hidden {
-  display:none;
+  display: none;
 }
 /*--------------// main classes--------------*/
 /*-------------- HEADER--------------*/
 .header-title {
-  margin:0px;
-  margin-bottom:10px;
-  text-align:center;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 /*--------------// HEADER--------------*/
 /*-------------- CONTENT --------------*/
 input[type="text"],
 textarea {
-  border:1px rgb(88, 88, 88) solid;
+  border: 1px rgb(88, 88, 88) solid;
   background-color: var(--color-input);
 }
 /*-------------- section_url_link--------------*/
@@ -77,56 +77,56 @@ textarea {
   padding: 10px;
   box-shadow: var(--bs-el);
   border-radius: var(--br);
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
 .section_url_link .title {
-  font-size:14px;
+  font-size: 14px;
   width: 30px;
-  margin:0;
+  margin: 0;
   padding: 10px;
-  background-color:var(--color-palette);
+  background-color: var(--color-palette);
   border-radius: var(--br) 0px 0px var(--br);
 }
 .section_url_link input {
-  width:100%;
+  width: 100%;
   border-radius: 0px var(--br) var(--br) 0px;
   padding: 10px;
 }
 /*--------------// section_url_link--------------*/
 /*-------------- section_utm_params--------------*/
 .section_utm_params {
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
 .section_utm_params-list {
-  display:flex;
-  flex-wrap:wrap;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0; /* Отступ слева в браузере IE и Opera */
   padding: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
   list-style-type: none;
 }
 .item {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  min-width:260px;
-  padding:10px;
+  min-width: 260px;
+  padding: 10px;
   box-shadow: var(--bs-el);
   border-radius: var(--br);
 }
 .item .title {
-  font-weight:500;
-  text-align:center;
-  margin:0;
+  font-weight: 500;
+  text-align: center;
+  margin: 0;
 }
 .item .list {
   list-style-type: none;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 .item input[type="text"] {
-  border-radius:var(--br);
-  box-sizing:border-box;
-  padding:2px;
+  border-radius: var(--br);
+  box-sizing: border-box;
+  padding: 2px;
 }
 /*-------------- block__utm_source --------------*/
 .list_sources li {
@@ -135,7 +135,7 @@ textarea {
   align-items: center;
 }
 .yours_variant_source input {
-  height:2em;
+  height: 2em;
 }
 /*--------------// block__utm_source --------------*/
 /*--------------block-utm-medium--------------*/
@@ -145,31 +145,31 @@ textarea {
   align-items: center;
 }
 .yours_variant_medium input {
-  height:2em;
+  height: 2em;
 }
 /*--------------// block-utm-medium--------------*/
 /*--------------list_additional_param-------------*/
 .list_additional_params {
   list-style-type: none;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 .additional_param-item h3 {
-  font-weight:400;
-  font-size:14px;
-  margin:0;
+  font-weight: 400;
+  font-size: 14px;
+  margin: 0;
 }
 .additional_param-item input {
-  height:2em;
-  width:100%;
+  height: 2em;
+  width: 100%;
 }
 /*--------------// list_additional_param--------------*/
 /*-------------- buttons--------------*/
 .buttons {
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
 .buttons > input {
-  border:none;
+  border: none;
   box-shadow: var(--bs-el);
   text-decoration: none;
   display: inline-block;
@@ -193,18 +193,15 @@ textarea {
   border-radius: var(--br);
 }
 #result__link-input textarea {
-  box-sizing:border-box;
-  padding:2px 10px;
-  width:100%;
-  border-radius:var(--br);
-  resize:none;
+  box-sizing: border-box;
+  padding: 2px 10px;
+  width: 100%;
+  border-radius: var(--br);
+  resize: none;
 }
 
 @media (max-width: 470px) {
-  
 }
 /*--------------// section_utm_params--------------*/
-
-
 
 /*--------------// CONTENT --------------*/
