--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -24,7 +24,7 @@ body {
     no-repeat center center fixed;
   animation: gradient 10s linear infinite;
 }
-.main {
+.page {
   color: var(--color-fonts);
   margin: 0 auto;
   margin-top: 4%;
@@ -44,7 +44,7 @@ body {
   }
 }
 /*--// animation background--*/
-.main-wrapper {
+.page-wrapper {
   min-width: 280px;
   max-width: 900px;
   padding: 20px;
@@ -58,9 +58,11 @@ body {
 }
 /*--------------// main classes--------------*/
 /*-------------- HEADER--------------*/
-.header-title {
+.header {
+  padding-bottom: 10px;
+}
+.header__title {
   margin: 0px;
-  margin-bottom: 10px;
   text-align: center;
 }
 /*--------------// HEADER--------------*/
@@ -70,8 +72,8 @@ textarea {
   border: 1px rgb(88, 88, 88) solid;
   background-color: var(--color-input);
 }
-/*-------------- section_url_link--------------*/
-.section_url_link {
+/*-------------- section link--------------*/
+.link {
   display: flex;
   align-items: center;
   padding: 10px;
@@ -79,7 +81,7 @@ textarea {
   border-radius: var(--br);
   margin-bottom: 10px;
 }
-.section_url_link .title {
+.link__title {
   font-size: 14px;
   width: 30px;
   margin: 0;
@@ -87,17 +89,17 @@ textarea {
   background-color: var(--color-palette);
   border-radius: var(--br) 0px 0px var(--br);
 }
-.section_url_link input {
+.link__input {
   width: 100%;
   border-radius: 0px var(--br) var(--br) 0px;
   padding: 10px;
 }
-/*--------------// section_url_link--------------*/
-/*-------------- section_utm_params--------------*/
-.section_utm_params {
+/*--------------// section link--------------*/
+/*-------------- section utm_params--------------*/
+.utm-params {
   margin-bottom: 10px;
 }
-.section_utm_params-list {
+.utm-params__cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -105,7 +107,7 @@ textarea {
   padding: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
   list-style-type: none;
 }
-.item {
+.card {
   display: flex;
   flex-direction: column;
   min-width: 260px;
@@ -113,62 +115,37 @@ textarea {
   box-shadow: var(--bs-el);
   border-radius: var(--br);
 }
-.item .title {
+.card__title {
   font-weight: 500;
   text-align: center;
+  font-size: 20px;
   margin: 0;
 }
-.item .list {
+.card__list {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-.item input[type="text"] {
+.card__list .card__item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.card__item input[type="text"] {
   border-radius: var(--br);
-  box-sizing: border-box;
-  padding: 2px;
-}
-/*-------------- block__utm_source --------------*/
-.list_sources li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.yours_variant_source input {
-  height: 2em;
-}
-/*--------------// block__utm_source --------------*/
-/*--------------block-utm-medium--------------*/
-.list_medium li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.yours_variant_medium input {
-  height: 2em;
-}
-/*--------------// block-utm-medium--------------*/
-/*--------------list_additional_param-------------*/
-.list_additional_params {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.additional_param-item h3 {
-  font-weight: 400;
-  font-size: 14px;
-  margin: 0;
-}
-.additional_param-item input {
   height: 2em;
   width: 100%;
 }
-/*--------------// list_additional_param--------------*/
-/*-------------- buttons--------------*/
-.buttons {
-  margin-bottom: 10px;
+.custom-source input, .custom-medium input {
+  height: 2em;
 }
-.buttons > input {
+/*--------------// section utm_params--------------*/
+/*-------------- buttons--------------*/
+.list-buttons {
+  padding-bottom: 10px;
+}
+.button {
   border: none;
   box-shadow: var(--bs-el);
   text-decoration: none;
@@ -181,27 +158,23 @@ textarea {
   transition: 0.15s ease-in-out;
   background-color: transparent;
 }
-.buttons > input:hover {
+.button:hover {
   background-color: var(--color-palette);
   box-shadow: 0px 0px 10px 2px var(--color-palette);
   color: #ffffff;
 }
 /*--------------// buttons--------------*/
-#result__link {
+/*--------------// section utm_params--------------*/
+.ready-link {
   padding: 10px;
   box-shadow: var(--bs-el);
   border-radius: var(--br);
 }
-#result__link-input textarea {
+.ready-link__textarea {
   box-sizing: border-box;
   padding: 2px 10px;
   width: 100%;
   border-radius: var(--br);
   resize: none;
 }
-
-@media (max-width: 470px) {
-}
-/*--------------// section_utm_params--------------*/
-
 /*--------------// CONTENT --------------*/
